# cpanel-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cpanel-mcp-wrapper.sh  start.sh
.claude-plugin/: marketplace.json
go/: Makefile  go.mod
go/cmd/cpanel-mcp/: main.go
go/internal/client/: client.go
go/internal/config/: config.go
go/internal/tools/: tools.go
python/: pyproject.toml
python/src/cpanel_mcp/: __init__.py  __main__.py  config.py  server.py
python/src/cpanel_mcp/client/: __init__.py  base.py  uapi.py  whm.py
python/src/cpanel_mcp/tools/: __init__.py  backups.py  cron.py  dns.py  domains.py  email.py  files.py  ftp.py  mysql.py  php.py  ssl.py  whm.py
site/: index.html
typescript/: esbuild.config.js  package-lock.json  package.json
typescript/src/: config.ts  cpanel.test.ts  index.ts  types.ts  validators.ts
typescript/src/client/: base.ts  uapi.ts  whm.ts
typescript/src/tools/backups/: create-backup.ts  list-backups.ts
typescript/src/tools/cron/: add-cron.ts  list-cron.ts  remove-cron.ts
typescript/src/tools/dns/: add-record.ts  delete-record.ts  get-records.ts  list-zones.ts
typescript/src/tools/domains/: add-subdomain.ts  list-domains.ts  remove-subdomain.ts
typescript/src/tools/email/: create-account.ts  create-forwarder.ts  delete-account.ts  list-accounts.ts  list-forwarders.ts  set-quota.ts
typescript/src/tools/files/: delete-file.ts  get-file.ts  list-files.ts  save-file.ts
typescript/src/tools/ftp/: create-ftp.ts  delete-ftp.ts  list-ftp.ts
typescript/src/tools/mysql/: create-user.ts  (+5 more)
(+14 files in other folders)
