[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpanel-mcp"
version = "0.1.0"
description = "cPanel & WHM MCP Server — manage hosting via Model Context Protocol (47 tools)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Purple Squirrel Media" }]
keywords = ["cpanel", "whm", "hosting", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cpanel-mcp = "cpanel_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/cpanel_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 120
